--- a/.env.sample
+++ b/.env.sample
@@ -11,11 +11,10 @@ RABBITMQ_DEFAULT_USER=ChangeMe
 RABBITMQ_DEFAULT_PASS=ChangeMe
 
 # OpenBAS General Configuration
-OPENBAS_BASE-URL=http://localhost:8080
-OPENBAS_ADMIN_EMAIL=ChangeMe@domain.com
-OPENBAS_ADMIN_PASSWORD=ChangeMe
-OPENBAS_ADMIN_TOKEN=00000000-0000-0000-0000-000000000000 # [MANDATORY] Replace with a valid UUIDv4
-OPENBAS_HEALTHCHECK_KEY=ChangeMe
+KEYSTORE_PASSWORD=your_keystore_password
+OPENBAS_ADMIN_EMAIL=changeme@changeme.com
+OPENBAS_ADMIN_PASSWORD=changeme
+OPENBAS_ADMIN_TOKEN=[] # Should be a valid UUID
 
 # Spring Mail Configuration
 SPRING_MAIL_HOST=smtp.changeme.com
@@ -27,7 +26,7 @@ SPRING_MAIL_PROPERTIES_MAIL_SMTP_SSL_ENABLE=true
 SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE=false
 
 # OpenBAS IMAP Configuration
-OPENBAS_MAIL_IMAP_ENABLED=false
+OPENBAS_MAIL_IMAP_ENABLED=true
 OPENBAS_MAIL_IMAP_HOST=imap.changeme.com
 OPENBAS_MAIL_IMAP_PORT=993
 OPENBAS_MAIL_IMAP_AUTH=true
@@ -35,7 +34,7 @@ OPENBAS_MAIL_IMAP_SSL_ENABLE=true
 OPENBAS_MAIL_IMAP_STARTTLS_ENABLE=false
 
 # Collector MITRE ATT&CK Configuration
-COLLECTOR_MITRE_ATTACK_ID=3050d2a3-291d-44eb-8038-b4e7dd107436
+COLLECTOR_MITRE_ATTACK_ID=[] UUIDv4
 
 # COLLECTOR Atomic Red Team Configuration
-COLLECTOR_ATOMIC_RED_TEAM_ID=0f2a85c1-0a3b-4405-a79c-c65398ee4a76
+COLLECTOR_ATOMIC_RED_TEAM_ID=[] # Replace with a valid
