--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   pgsql:
-    image: postgres:17-alpine
+    image: postgres:16-alpine
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: openbas
     volumes:
-      - pgsqldata:/var/lib/postgresql/data
+      - openbas_pgdata:/var/lib/postgresql/data
     restart: always
     healthcheck:
       test: [ "CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "openbas" ]
@@ -16,7 +16,7 @@ services:
   minio:
     image: minio/minio:RELEASE.2024-05-28T17-19-04Z
     volumes:
-      - s3data:/data
+      - openbas_s3data:/data
     ports:
       - "9000:9000"
     environment:
@@ -30,16 +30,13 @@ services:
       timeout: 5s
       retries: 5
   rabbitmq:
-    image: rabbitmq:4.0-management
+    image: rabbitmq:3.13-management
     environment:
       - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
       - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
       - RABBITMQ_NODENAME=rabbit01@localhost
     volumes:
-      - type: bind
-        source: rabbitmq.conf
-        target: /etc/rabbitmq/rabbitmq.conf      
-      - amqpdata:/var/lib/rabbitmq
+      - openbas_amqpdata:/var/lib/rabbitmq
     restart: always
     healthcheck:
       test: [ "CMD", "rabbitmq-diagnostics", "-q", "ping" ]
@@ -47,10 +44,11 @@ services:
       timeout: 5s
       retries: 5
   openbas:
-    image: openbas/platform:1.14.0
+    image: openbas/platform:1.11.5
     environment:
       # OpenBAS General Configuration
-      - OPENBAS_BASE-URL=${OPENBAS_BASE-URL}
+      - SERVER_SSL_KEY-STORE-PASSWORD=${KEYSTORE_PASSWORD}
+      - OPENBAS_BASE-URL=http://localhost:8080 # Modify here 
       - OPENBAS_AUTH-LOCAL-ENABLE=true
       - OPENBAS_ADMIN_EMAIL=${OPENBAS_ADMIN_EMAIL}
       - OPENBAS_ADMIN_PASSWORD=${OPENBAS_ADMIN_PASSWORD}
@@ -87,7 +85,7 @@ services:
       - OPENBAS_MAIL_IMAP_SSL_TRUST=*
       - OPENBAS_MAIL_IMAP_STARTTLS_ENABLE=${OPENBAS_MAIL_IMAP_STARTTLS_ENABLE}
     ports:
-      - "8080:8080" # If you change the host port (the left one) do not forget to update OPENBAS_BASE-URL in you .env
+      - "8080:8080"
     depends_on:
       pgsql:
         condition: service_healthy
@@ -96,36 +94,16 @@ services:
       rabbitmq:
         condition: service_healthy
     restart: always
-    healthcheck:
-      test: [ "CMD", "wget", "-qO-", "http://openbas:8080/api/health?health_access_key=${OPENBAS_HEALTHCHECK_KEY}" ]
-      interval: 10s
-      timeout: 5s
-      retries: 20
   collector-mitre-attack:
-    image: openbas/collector-mitre-attack:1.14.0
+    image: openbas/collector-mitre-attack:1.11.5
     environment:
       - OPENBAS_URL=http://openbas:8080
       - OPENBAS_TOKEN=${OPENBAS_ADMIN_TOKEN}
       - COLLECTOR_ID=${COLLECTOR_MITRE_ATTACK_ID} # Valid UUIDv4
       - "COLLECTOR_NAME=MITRE ATT&CK"
       - COLLECTOR_LOG_LEVEL=info
-    depends_on:
-      openbas:
-        condition: service_healthy
     restart: always
-  collector-atomic-red-team:
-    image: openbas/collector-atomic-red-team:1.14.0
-    environment:
-      - OPENBAS_URL=http://openbas:8080
-      - OPENBAS_TOKEN=${OPENBAS_ADMIN_TOKEN}
-      - COLLECTOR_ID=${COLLECTOR_ATOMIC_RED_TEAM_ID} # Valid UUIDv4
-      - "COLLECTOR_NAME=Atomic Red Team"
-      - COLLECTOR_LOG_LEVEL=info
-    depends_on:
-      openbas:
-        condition: service_healthy
-    restart: always    
 volumes:
-  pgsqldata:
-  s3data:
-  amqpdata:
+  openbas_pgdata:
+  openbas_s3data:
+  openbas_amqpdata:
